la finalisation de l'affichage des reservations et membres

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     font-family: "Bungee Shade";
     color: #d50ef4;
 }
-@keyframes slideDown {
+/* @keyframes slideDown {
     from {
         transform: translateY(-100%);
     }
@@ -17,4 +17,4 @@
 
 .slide-down {
     animation: slideDown 0.5s ease-out;
-}
+} */
